--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://leflings.github.com
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Flemming Madsen
 simple_search: http://google.com/search
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
@@ -17,7 +17,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: mail@leflings.dk
 
 # ----------------------- #
 #    Jekyll & Plugins     #
